[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causally"
version = "0.1.0"
description = "Generator of causal discovery data under realistic assumptions."
authors = [
    { name = "Francesco Montagna", email = "francesco.montagna997@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }  # Change if your license is different
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.25.2",
    "networkx>=3.1",
    "scikit-learn>=1.3.0",
    "torch>=2.0.1",
    "python-igraph>=0.11.2"
]

[project.urls]
Homepage = "https://github.com/francescomontagna/causally"
Repository = "https://github.com/francescomontagna/causally"

[tool.setuptools]
packages = ["causally"]

[tool.pytest]
addopts = "--strict-markers"

[tool.flake8]
max-line-length = 120